--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.thomasdarimont.keycloak</groupId>
     <artifactId>keycloak-health-checks</artifactId>
-    <version>20.0.0.0</version>
+    <version>${env.KEYCLOAK_VERSION}.0</version>
 
     <properties>
         <!-- general settings -->
@@ -18,13 +18,29 @@
         <!-- dependency versions -->
         <lombok.version>1.18.24</lombok.version>
 
-        <keycloak.version>20.0.0</keycloak.version>
+        <keycloak.version>${env.KEYCLOAK_VERSION}</keycloak.version>
         <keycloak.versionedArtifactName>keycloak-${keycloak.version}</keycloak.versionedArtifactName>
-        <infinispan.version>13.0.10.Final</infinispan.version>
+        <infinispan.version>14.0.17.Final</infinispan.version>
         <cdi-api.version>2.0.2</cdi-api.version>
-        <quarkus.version>2.13.3.Final</quarkus.version>
+        <quarkus.version>3.2.7.Final</quarkus.version>
     </properties>
 
+	<repositories>
+		<repository>
+			<id>gitlab-maven</id>
+			<url>${env.CI_API_V4_URL}/projects/${env.CI_PROJECT_ID}/packages/maven</url>
+		</repository>
+	</repositories>
+	<distributionManagement>
+		<repository>
+			<id>gitlab-maven</id>
+			<url>${CI_API_V4_URL}/projects/${env.CI_PROJECT_ID}/packages/maven</url>
+		</repository>
+		<snapshotRepository>
+			<id>gitlab-maven</id>
+			<url>${CI_API_V4_URL}/projects/${env.CI_PROJECT_ID}/packages/maven</url>
+		</snapshotRepository>
+	</distributionManagement>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
